# RadioGalaxyDataset

./: .gitignore  CITATION.cff  ExampleRadioGalaxyDataset.ipynb  Example_firstgalaxydata.py  LICENSE  MANIFEST.in  README.md  basic_utils.py  firstgalaxydata.py  requirements.txt  setup.cfg  setup.py
firstgalaxydata/: Example_firstgalaxydata.py  README.md  __init__.py  firstgalaxydata.py  licence.txt
meta/: FRICat_Capetti_2017_relabeled.csv  galaxy_data_Gendre_MiraBest_Capetti_Baldi_Proctor_removed.csv  galaxy_data_different_labels.csv
