[metadata]
description-file = README.md
version = 0.2.1
author = Florian Griese
long_description = file: README.md
long_description_content_type = text/markdown
Classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    pillow
    torch
    torchvision
    astropy
    matplotlib
    h5py
python_requires = >=3.6
include_package_data = True